<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/appbck">


    <TextView
        android:id="@+id/TEXT_stu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/TEXT2"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <RadioButton
    android:id="@+id/radioButton_stu"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:textColor="#FFFF"
    android:text="@string/pay1"
    android:buttonTint="#FFFF"/>
    <RadioButton
    android:id="@+id/radioButton2_stu"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:textColor="#ffff"
    android:text="@string/pay2"
    android:buttonTint="#FFFF"/>
    </RadioGroup>
</LinearLayout>