<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_color"
    >
    <TextView
        android:id="@+id/TEXT_stu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="Select to Download:"
        android:textAlignment="center"
        android:textColor="#404040"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab"/>
    <CheckBox
        android:id="@+id/PPT_stu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#404040"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/PPT"
        android:buttonTint="#FFFF"
        />

    <CheckBox
        android:id="@+id/Pracs_stu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Pracs"
        android:textColor="#404040"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_slab"
        android:buttonTint="#FFFF"/>

    <CheckBox
        android:id="@+id/Tutorial_stu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Tuts"
        android:textColor="#404040"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_slab"
        android:buttonTint="#FFFF"/>

    <CheckBox
        android:id="@+id/Quiz_stu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Quizzes"
        android:textColor="#404040"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_slab"
        android:buttonTint="#FFFF"/>

    <Button
        android:id="@+id/DWNLD1_stu"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:inputType="text"
        android:text="Download"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_slab"
        android:background="@drawable/button_shape"/>
</LinearLayout>
